Se sube favicon

--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love Coffe - Contacto</title>
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon>
 </head>
 <body>
     <!--Start Navigation-->
