Ajustes en los formularios

--- a/contacto.html
+++ b/contacto.html
@@ -70,33 +70,33 @@
                             <h2>Envíanos unas líneas</h2>
                             <form action="#" class="needs-validation" novalidate>
                                 <div class="col">
-                                    <label class="form-label" for="fullname">Nombres</label>
+                                    <label class="form-label" for="fullname">Nombres *</label>
                                     <input type="text" class="form-control" name="fullname" required>
                                     <div class="valid-feedback">
-                                        <p class="text-uppercase text-info">Campo OK</p>
+                                        <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-uppercase text-danger">Complete su nombre</p>
+                                        <p class="text-capitalize text-danger">Complete su nombre</p>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <label class="form-label" for="email">Email</label>
+                                    <label class="form-label" for="email">Email *</label>
                                     <input class="form-control" type="email" name="email" required>
                                      <div class="valid-feedback">
-                                        <p class="text-uppercase text-info">Campo OK</p>
+                                        <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-uppercase text-danger">Complete su e-mail</p>
+                                        <p class="text-capitalize text-danger">Complete su e-mail</p>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <label class="form-label" for="message">Mensaje</label> 
+                                    <label class="form-label" for="message">Mensaje *</label> 
                                     <textarea class="form-control" name="message" rows="3" required></textarea>
                                      <div class="valid-feedback">
-                                          <p class="text-uppercase text-info">Campo OK</p>
+                                          <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-uppercase text-danger">Ingrese un mensaje</p>
+                                        <p class="text-capitalize text-danger">Ingrese un mensaje</p>
                                     </div>
                                 </div>
                                 <div class="col">
