--- a/reservas.html
+++ b/reservas.html
@@ -70,53 +70,53 @@
                             <h2>Reserva tu mesa</h2>
                             <form action="#" class="needs-validation" novalidate>
                                 <div class="col">
-                                    <label class="form-label" for="fullname">Nombres</label>
+                                    <label class="form-label" for="fullname">Nombres *</label>
                                     <input type="text" class="form-control" name="fullname" required>
                                     <div class="valid-feedback">
-                                        <p class="text-uppercase text-info">Campo OK</p>
+                                        <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-uppercase text-danger">Complete su nombre</p>
+                                        <p class="text-capitalize text-danger">Complete su nombre</p>
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <label class="form-label" for="email">Email</label>
+                                    <label class="form-label" for="email">Email *</label>
                                     <input class="form-control" type="email" name="email" required>
                                      <div class="valid-feedback">
-                                        <p class="text-uppercase text-info">Campo OK</p>
+                                        <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-uppercase text-danger">Complete su e-mail</p>
+                                        <p class="text-capitalize text-danger">Complete su e-mail</p>
                                     </div>
                                 </div>
                                  <div class="col">
-                                    <label class="form-label" for="asientos">Asientos</label>
+                                    <label class="form-label" for="asientos">Asientos *</label>
                                     <input class="form-control" type="number" min="0" max="30" step="1" name="asientos" required>
                                      <div class="valid-feedback">
-                                        <p class="text-uppercase text-info">Campo OK</p>
+                                        <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-uppercase text-danger">Complete sus asientos</p>
+                                        <p class="text-capitalize text-danger">Complete sus asientos</p>
                                     </div>
                                 </div>
                                  <div class="col">
-                                    <label class="form-label" for="fecha">Fecha</label>
+                                    <label class="form-label" for="fecha">Fecha *</label>
                                     <input class="form-control" type="date" name="fecha" required>
                                      <div class="valid-feedback">
-                                        <p class="text-uppercase text-info">Campo OK</p>
+                                        <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-uppercase text-danger">Reserve su fecha</p>
+                                        <p class="text-capitalize text-danger">Reserve su fecha</p>
                                     </div>
                                 </div>
                                  <div class="col">
-                                    <label class="form-label" for="hora">Hora</label>
+                                    <label class="form-label" for="hora">Hora *</label>
                                     <input class="form-control" type="time" min="09:00" max="20:00" name="hora" required>
                                      <div class="valid-feedback">
-                                        <p class="text-uppercase text-info">Campo OK</p>
+                                        <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-uppercase text-danger">Reserve un horario</p>
+                                        <p class="text-capitalize text-danger">Reserve un horario</p>
                                     </div>
                                 </div>
                                 <div class="col">
