se agrega imagen para pages con forms

--- a/contacto.html
+++ b/contacto.html
@@ -54,6 +54,7 @@
     <!--Start Main-->
     <main class="main">
          <section>
+            <div class="container-fluid bg-forms"></div>
             <div class="container">
                <div class="row">
                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 bg-info-contacto">
