--- a/reservas.html
+++ b/reservas.html
@@ -54,6 +54,7 @@
     <!--Start Main-->
     <main>
            <section>
+            <div class="container-fluid bg-forms"></div>
             <div class="container">
                <div class="row">
                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 bg-info-contacto pl-1">
@@ -91,7 +92,7 @@
                                 </div>
                                  <div class="col">
                                     <label class="form-label" for="asientos">Asientos *</label>
-                                    <input class="form-control" type="number" min="0" max="30" step="1" name="asientos" required>
+                                    <input class="form-control" type="number" min="1" max="30" step="1" name="asientos" required>
                                      <div class="valid-feedback">
                                         <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
@@ -111,7 +112,7 @@
                                 </div>
                                  <div class="col">
                                     <label class="form-label" for="hora">Hora *</label>
-                                    <input class="form-control" type="time" min="09:00" max="20:00" name="hora" required>
+                                    <input class="form-control" type="time" min="09:00" max="20:00" step="3600" name="hora" required>
                                      <div class="valid-feedback">
                                         <p class="text-capitalize text-info">Campo OK</p>
                                     </div>
