--- a/reservas.html
+++ b/reservas.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love Coffe - Reservas</title>
     <link rel="stylesheet" href="css/custom.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 </head>
 <body>
     <!--Start Navigation-->
