--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </section>
             <section class="copy">
                 <p class="text-white text-center p-3">
-                <img src="https://res.cloudinary.com/ojedaweb/image/upload/v1634253938/logo_touesv.png" clsas="img-fluid" alt="logo Love Coffe" />
+                <img src="https://res.cloudinary.com/ojedaweb/image/upload/v1634253938/logo_touesv.png" class="img-fluid" alt="logo Love Coffe" />
                     <p class="copy">Todos los derechos reservados &copy; copyright 2021 - <span>LOVE</span> COFFEE</p>
                 </p>
             </section>
