Ajustes de forms + páginas contacto y reservas

--- a/reservas.html
+++ b/reservas.html
@@ -56,7 +56,7 @@
       
           <section>
             <div class="container-fluid bg-forms"></div>
-                <div class="container">
+                <div class="container-fluid bg-color">
                    
                     <div class="row">
                          <div class="d-flex justify-content-center">
@@ -68,10 +68,10 @@
                                     <label class="form-label" for="fullname">Nombre *</label>
                                     <input type="text" class="form-control" id="fullname" name="fullname" required>
                                     <div class="valid-feedback">
-                                        <p class="text-capitalize text-info">Campo OK</p>
+                                        <p class="text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-capitalize text-danger">Complete su nombre</p>
+                                        <p class="text-danger">Complete su nombre</p>
                                     </div>
                                 </div>
                                 <div class="col">
@@ -79,10 +79,10 @@
                                     <label class="form-label" for="email">Email *</label>
                                     <input class="form-control" type="email" id="email" name="email" required>
                                      <div class="valid-feedback">
-                                        <p class="text-capitalize text-info">Campo OK</p>
+                                        <p class="text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-capitalize text-danger">Complete su e-mail</p>
+                                        <p class="text-danger">Complete su e-mail</p>
                                     </div>
                                 </div>
                                  <div class="col">
@@ -90,10 +90,10 @@
                                     <label class="form-label" for="asientos">Asientos *</label>
                                     <input class="form-control" id="asientos" type="number" min="1" max="30" step="1" name="asientos" required>
                                      <div class="valid-feedback">
-                                        <p class="text-capitalize text-info">Campo OK</p>
+                                        <p class="text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-capitalize text-danger">Complete sus asientos</p>
+                                        <p class="text-danger">Complete sus asientos</p>
                                     </div>
                                 </div>
                                  <div class="col">
@@ -101,10 +101,10 @@
                                     <label class="form-label" for="fecha">Fecha *</label>
                                     <input class="form-control" id="fecha" type="date" name="fecha" required>
                                      <div class="valid-feedback">
-                                        <p class="text-capitalize text-info">Campo OK</p>
+                                        <p class="text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-capitalize text-danger">Reserve su fecha</p>
+                                        <p class="text-danger">Reserve su fecha</p>
                                     </div>
                                 </div>
                                  <div class="col">
@@ -112,15 +112,15 @@
                                     <label class="form-label" for="hora">Hora *</label>
                                     <input class="form-control" id="hora" type="time" min="09:00" max="20:00" step="3600" name="hora" required>
                                      <div class="valid-feedback">
-                                        <p class="text-capitalize text-info">Campo OK</p>
+                                        <p class="text-info">Campo OK</p>
                                     </div>
                                     <div class="invalid-feedback">
-                                        <p class="text-capitalize text-danger">Reserve un horario</p>
+                                        <p class="text-danger">Reserve un horario</p>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <button type="submit">
-                                        Reservar
+                                        Reservar mesa
                                     </button>
                                 </div>
                                 </form>
