Corrección validaciones forms

--- a/contacto.html
+++ b/contacto.html
@@ -67,7 +67,7 @@
                                 <form action="#" class="needs-validation" novalidate>
                                     <div class="col">
                                         <i class="fas fa-user beige"></i>
-                                        <label class="form-label" for="fullname"></i>Nombres *</label>
+                                        <label for="fullname"></i>Nombres *</label>
                                         <input type="text" class="form-control" id="fullname" name="fullname" required>
                                         <div class="valid-feedback">
                                             <p class="text-info">Campo OK</p>
@@ -78,7 +78,7 @@
                                     </div>
                                     <div class="col">
                                         <i class="fas fa-envelope beige"></i>
-                                        <label class="form-label" for="email">Email *</label>
+                                        <label for="email">Email *</label>
                                         <input class="form-control" type="email" id="email" name="email" required>
                                         <div class="valid-feedback">
                                             <p class="text-info">Campo OK</p>
@@ -89,7 +89,7 @@
                                     </div>
                                     <div class="col">
                                         <i class="fas fa-sticky-note beige"></i>
-                                        <label class="form-label" for="message">Mensaje *</label> 
+                                        <label for="message">Mensaje *</label> 
                                         <textarea class="form-control" name="message" id="message" rows="3" required></textarea>
                                         <div class="valid-feedback">
                                             <p class="text-info">Campo OK</p>
