--- a/reservas.html
+++ b/reservas.html
@@ -65,7 +65,7 @@
                                 <form action="#" class="needs-validation" novalidate>
                                     <div class="col">
                                     <i class="fas fa-user beige"></i>
-                                    <label class="form-label" for="fullname">Nombre *</label>
+                                    <label for="fullname">Nombre *</label>
                                     <input type="text" class="form-control" id="fullname" name="fullname" required>
                                     <div class="valid-feedback">
                                         <p class="text-info">Campo OK</p>
@@ -76,7 +76,7 @@
                                 </div>
                                 <div class="col">
                                     <i class="fas fa-envelope beige"></i>
-                                    <label class="form-label" for="email">Email *</label>
+                                    <label for="email">Email *</label>
                                     <input class="form-control" type="email" id="email" name="email" required>
                                      <div class="valid-feedback">
                                         <p class="text-info">Campo OK</p>
@@ -87,7 +87,7 @@
                                 </div>
                                  <div class="col">
                                      <i class="fas fa-chair beige"></i>
-                                    <label class="form-label" for="asientos">Asientos *</label>
+                                    <label for="asientos">Asientos *</label>
                                     <input class="form-control" id="asientos" type="number" min="1" max="30" step="1" name="asientos" required>
                                      <div class="valid-feedback">
                                         <p class="text-info">Campo OK</p>
@@ -98,7 +98,7 @@
                                 </div>
                                  <div class="col">
                                     <i class="fas fa-calendar-alt beige"></i>
-                                    <label class="form-label" for="fecha">Fecha *</label>
+                                    <label for="fecha">Fecha *</label>
                                     <input class="form-control" id="fecha" type="date" name="fecha" required>
                                      <div class="valid-feedback">
                                         <p class="text-info">Campo OK</p>
@@ -109,7 +109,7 @@
                                 </div>
                                  <div class="col">
                                     <i class="far fa-clock beige"></i>
-                                    <label class="form-label" for="hora">Hora *</label>
+                                    <label for="hora">Hora *</label>
                                     <input class="form-control" id="hora" type="time" min="09:00" max="20:00" step="3600" name="hora" required>
                                      <div class="valid-feedback">
                                         <p class="text-info">Campo OK</p>
