se ajustan links redes sociales

--- a/index.html
+++ b/index.html
@@ -246,20 +246,20 @@
             <section class="sociales">
                 <ul class="nav justify-content-center pt-5">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#"
+                        <a class="nav-link text-white" href="https://es-la.facebook.com" target="_blank"
                         ><i class="fab fa-facebook-square fa-3x"></i>
                     </a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link text-white" href="#">
+                    <a class="nav-link text-white" href="https://twitter.com" target="_blank">
                         <i class="fab fa-twitter-square fa-3x"></i></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link text-white" href="#">
+                    <a class="nav-link text-white" href="https://www.instagram.com" target="_blank">
                         <i class="fab fa-instagram fa-3x"></i></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link text-white" href="#">
+                    <a class="nav-link text-white" href="https://ar.pinterest.com" target="_blank">
                         <i class="fab fa-pinterest-square fa-3x"></i>
                     </a>
                     </li>
