ajustes finales en 404, contacto, scss

--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
         <div class="header__container">
               <div class="header__texts">
                 <h1 class="header__title">
-                    Contáctanos
+                    Contacto
                 </h1>
                 <p class="header__subtitle">
                     Este canal sirve como vía de comunicación directa con nuestros clientes.Tus mensajes nos ayudan a mejorar día a día. ¡Bienvenido a <span>Love</span> Coffee para tomar tu taza de café!
