--- a/page404.html
+++ b/page404.html
@@ -6,7 +6,7 @@
      <meta name="description" content="Love Coffe, cafetería en Recoleta, CABA, Argentina,  es el lugar donde puedes obtener deliciosas variedades de café y tostadores de élite mundial a un precio accesible">
     <meta name="keywords" content="Love Coffee, cafetería, café delicioso, café único,  mejor cafetería, mejor cafetería en Buenos Aires, variedades de café, tasa de café, selección cafés especiales">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Love Coffe - 404</title>
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
